# BuildFromNeed

./: .example.env  .gitignore  README.md
.postman/: config.json
backend/: Cargo.toml  DockerFile  Dockerfile  diesel.toml  docker-compose.yaml
backend/backend/: Cargo.toml
backend/backend/src/: main.rs
backend/backend/src/dto/: mod.rs
backend/backend/src/middleware/: mod.rs
backend/backend/src/urls/: mod.rs
backend/backend/src/views/: mod.rs
backend/interactions/: Cargo.toml
backend/interactions/src/dto/: mod.rs
backend/interactions/src/models/: mod.rs
backend/interactions/src/urls/: mod.rs
backend/interactions/src/views/: mod.rs
backend/migrations/2026-01-05-105534-0000_create_users/: up.sql
backend/migrations/2026-01-05-135911-0000_create_problems/: down.sql  up.sql
backend/migrations/2026-01-05-144341-0000_create_solution/: down.sql  up.sql
backend/migrations/2026-01-05-144538-0000_create_interactions/: down.sql  up.sql
backend/migrations/2026-01-08-052701-0000_create_oauth/: down.sql  up.sql
backend/notifications/: README.md
backend/notifications/src/: main.rs
backend/problems/: Cargo.toml
backend/problems/src/: lib.rs
backend/problems/src/dto/: mod.rs
backend/problems/src/models/: mod.rs
backend/problems/src/urls/: mod.rs
backend/problems/src/views/: mod.rs
backend/scripts/: dev.sh
backend/solutions/: Cargo.toml
backend/solutions/src/: lib.rs
backend/solutions/src/dto/: mod.rs
backend/solutions/src/models/: mod.rs
backend/solutions/src/urls/: mod.rs
backend/solutions/src/views/: mod.rs
backend/users/: Cargo.toml
backend/users/src/dto/: mod.rs
backend/users/src/models/: mod.rs
backend/users/src/urls/: mod.rs
backend/users/src/views/: mod.rs
backend/utils/: Cargo.toml
backend/utils/src/: lib.rs
backend/utils/src/auth/: mod.rs  types.rs
backend/utils/src/config/: mod.rs
backend/utils/src/db/: mod.rs  schema.rs
backend/utils/src/dto/: mod.rs
backend/utils/src/files/: mod.rs  types.rs
backend/utils/src/models/: mod.rs
backend/utils/src/ssl/: mod.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  utils.tsx
frontend/src/app/(problem)/problems/: layout.tsx  types.tsx
frontend/src/app/(problem)/problems/[id]/: page.tsx
frontend/src/app/(problem)/problems/new/: page.tsx
frontend/src/app/(root)/: loading.tsx  page.tsx
frontend/src/app/(root)/about/: page.tsx
frontend/src/app/(root)/auth/signin/: page.tsx
frontend/src/app/(root)/auth/signup/: page.tsx
frontend/src/app/(root)/contact/: page.tsx
frontend/src/app/(root)/favourites/: page.tsx
frontend/src/app/(root)/profile/: page.tsx
frontend/src/app/(root)/settings/: page.tsx
frontend/src/components/: footer.tsx  navbar.tsx  problem-card.tsx
postman/collections/: BuildFromNeed.postman_collection.json
postman/environments/: BuildFromNeed.postman_environment.json
postman/globals/: workspace.postman_globals.json
