[workspace]
resolver = "3"
members = ["backend", "interactions", "notifications", "problems", "solutions", "users", "utils"]

[workspace.dependencies]
utils = { path = "./utils" }
users = { path = "./users" }
problems = { path = "./problems" }
solutions = { path = "./solutions" }
interactions = { path = "./interactions" }
actix-web = "4"
diesel = { version = "2.3.5",  features = ["postgres", "r2d2", "chrono"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
tracing-actix-web = "0.7"
tracing = "0.1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4.42", features = ["serde"] }
r2d2 = "0.8.8"
futures = "0.3.1"
argon2 = "0.5.3"
utoipa = "5.4.0"