[workspace]
resolver = "3"
members = ["backend", "interactions", "notifications", "problems", "solutions", "users", "utils"]

[workspace.dependencies]
utils = { path = "./utils" }
users = { path = "./users" }
problems = { path = "./problems" }
solutions = { path = "./solutions" }
interactions = { path = "./interactions" }
future-utils = "0.12.1"
actix-cors = "0.7.0"
oauth2 = "5.0"
actix-web = { version = "4", features = ["openssl"] }
openssl = "0.10"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
diesel = { version = "2.3.5",  features = ["postgres", "r2d2", "chrono"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
tracing-actix-web = "0.7"
tracing = "0.1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4.42", features = ["serde"] }
r2d2 = "0.8.8"
futures = "0.3.1"
actix-web-httpauth = "0.8.2"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "blocking", "multipart", "form"] }
derive_more = "2.1.1" 
rand = "0.9.2"
base64 = "0.22.1"