[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
utils = {workspace = true }
users = {workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
diesel = { workspace = true }
problems = { workspace = true }
solutions = { workspace = true }
interactions = { workspace = true }
openssl = { workspace = true }
future-utils = { workspace = true }
reqwest = { workspace = true }
oauth2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
actix-cors = { workspace = true }