[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
anyhow = { workspace = true }
diesel = { workspace = true }
openssl = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
oauth2 = { workspace = true }
actix-web = { workspace = true }
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
chrono = { workspace = true }